fix(page/src/styles/CalendarGrid): Fixed overflowing calendar items

--- a/page/src/styles/CalendarGrid.css
+++ b/page/src/styles/CalendarGrid.css
@@ -6,7 +6,7 @@
 }
 
 .calendarGrid > * {
-	width: 80%;
+	width: max-content;
 	display: flex;
 	flex-direction: column;
 	border: 1px solid black;
